<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/container"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <CheckBox
            android:id="@+id/enableAnimations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/enableAnimations"/>

        <CheckBox
            android:id="@+id/enablePredictiveAnimations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/enablePredictiveAnimations"/>

        <CheckBox
            android:id="@+id/enableInPlaceChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/enableInPlaceChange"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="deleteSelectedItems"
            android:text="@string/delete_item"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="addItem"
            android:text="@string/add_item"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="addDeleteItem"
            android:text="@string/add_delete_item"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="deleteAddItem"
            android:text="@string/delete_add_item"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="d1a2d3"
            android:text="@string/d1a2d3"/>

    </LinearLayout>

</LinearLayout>